namespace NoveduBackend.Persistence.Model;

/// <summary>
/// Represents the configuration of an AI tutor, including its model, behavior settings, and assignments.
/// </summary>
public class TutorConfig
{
    /// <summary>Gets or sets the unique identifier.</summary>
    public int Id { get; set; }

    /// <summary>Gets or sets the foreign key to the <see cref="Model.Subject"/>.</summary>
    public int SubjectId { get; set; }

    /// <summary>Gets or sets the foreign key to the <see cref="AiModel"/> used by this tutor.</summary>
    public int ModelId { get; set; }

    /// <summary>Gets or sets the foreign key to the <see cref="User"/> who created this tutor.</summary>
    public int CreatedById { get; set; }

    /// <summary>Gets or sets the optional foreign key to the original <see cref="TutorConfig"/> this one was copied from.</summary>
    public int? CopiedFromId { get; set; }

    /// <summary>Gets or sets the tutor name.</summary>
    public required string Name { get; set; }

    /// <summary>Gets or sets an optional description of the tutor's purpose.</summary>
    public string? Description { get; set; }

    /// <summary>Gets or sets the custom system prompt for this tutor.</summary>
    public string? SystemPrompt { get; set; }

    /// <summary>Gets or sets the visibility scope of this tutor.</summary>
    public TutorVisibility Visibility { get; set; }

    /// <summary>
    /// Gets or sets the default permission granted when <see cref="Visibility"/> is <see cref="TutorVisibility.Internal"/>.
    /// Explicit shares via <see cref="TutorCollaborator"/> override this default.
    /// </summary>
    public TutorPermission DefaultInternalPermission { get; set; }

    /// <summary>Gets or sets the sampling temperature for AI responses.</summary>
    public double Temperature { get; set; }

    /// <summary>Gets or sets the maximum number of output tokens per response.</summary>
    public int MaxOutputTokens { get; set; }

    /// <summary>Gets or sets the didactic interaction mode (e.g. Socratic, Hints).</summary>
    public DidacticMode DidacticMode { get; set; }

    /// <summary>Gets or sets a value indicating whether sources are shown in responses.</summary>
    public bool ShowSources { get; set; }

    /// <summary>Gets or sets a value indicating whether the knowledge base is hidden from students.</summary>
    public bool HideKnowledgeBase { get; set; }

    /// <summary>Gets or sets a value indicating whether PII is anonymized before being sent to the LLM.</summary>
    public bool AnonymizePii { get; set; }

    /// <summary>Gets or sets the timestamp when this record was created.</summary>
    public Instant CreatedAt { get; set; }

    /// <summary>Gets or sets the timestamp when this record was last updated.</summary>
    public Instant UpdatedAt { get; set; }

    /// <summary>Gets or sets the navigation property to the <see cref="Model.Subject"/>.</summary>
    public Subject Subject { get; set; } = null!;

    /// <summary>Gets or sets the navigation property to the <see cref="AiModel"/>.</summary>
    public AiModel Model { get; set; } = null!;

    /// <summary>Gets or sets the navigation property to the <see cref="User"/> who created this tutor.</summary>
    public User CreatedBy { get; set; } = null!;

    /// <summary>Gets or sets the optional navigation property to the original tutor this one was copied from.</summary>
    public TutorConfig? CopiedFrom { get; set; }

    /// <summary>Gets or sets the collection of tutors that were copied from this one.</summary>
    public ICollection<TutorConfig> Copies { get; set; } = [];

    /// <summary>Gets or sets the collection of documents attached to this tutor.</summary>
    public ICollection<TutorDocument> Documents { get; set; } = [];

    /// <summary>Gets or sets the collection of explicit shares (collaborators) on this tutor.</summary>
    public ICollection<TutorCollaborator> Collaborators { get; set; } = [];

    /// <summary>Gets or sets the collection of group assignments for this tutor.</summary>
    public ICollection<TutorGroupAssignment> GroupAssignments { get; set; } = [];

    /// <summary>Gets or sets the collection of individual student assignments for this tutor.</summary>
    public ICollection<TutorStudentAssignment> StudentAssignments { get; set; } = [];

    /// <summary>Gets or sets the collection of chats conducted with this tutor.</summary>
    public ICollection<Chat> Chats { get; set; } = [];

    /// <summary>Gets or sets the collection of cost entries generated by this tutor.</summary>
    public ICollection<CostEntry> CostEntries { get; set; } = [];
}
