@startuml Novedu ERD (MVP)
!theme plain
title Novedu – Entity Relationship Diagram (MVP)

skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 11
skinparam roundcorner 5

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#262626><&media-record></color> x
!define table(x) entity x << (T, white) >>

' ======= Entra SSO (single-school assumption) ======='
table(EntraConfig) {
  primary_key(id) : int
  --
  column(tenant_id) : uuid
  column(client_id) : uuid
  column(redirect_uri) : varchar(1024)
  column(is_enabled) : boolean
}

' ======= Users (students & teachers) =======
table(User) {
  primary_key(id) : int
  --
  column(entra_oid) : varchar(36) {unique}
  column(name) : varchar(255)
  column(email) : citext {unique}
  column(is_sso_enabled) : boolean
  column(role) : ENUM('student','teacher','admin')
  column(is_active) : boolean
  column(created_at) : timestamptz
}

' ======= Simple groups (classes/teams) =======
table(Group) {
  primary_key(id) : int
  --
  column(name) : varchar(255)
  column(type) : varchar(50)
}

' ======= Tutors (from GitHub YAML, no UI in MVP) =======
table(TutorConfig) {
  primary_key(id) : int
  --
  foreign_key(created_by) : int
  foreign_key(model_id?) : int
  --
  column(name) : varchar(255)
  column(system_prompt) : text
  column(source_repo) : varchar(1024) ' e.g. GitHub repo URL
  column(source_path) : varchar(1024) ' e.g. path to YAML
  column(source_repo_private) : boolean
  column(visibility) : ENUM('private','protected','internal','public')
  column(source_path_hash) : varchar(64)
  column(synced_at?) : timestamptz
  column(created_at) : timestamptz
  column(updated_at?) : timestamptz
}

' ======= Models =======
table(AIModel) {
  primary_key(id) : int
  --
  column(name) : varchar(255)
  column(description) : text
}

' ======= Assignments =======
table(TutorAssignment) {
  primary_key(id) : int
  --
  foreign_key(tutor_id) : int
  foreign_key(group_id?) : int
  foreign_key(user_id?) : int
  --
  column(enabled_from?) : timestamptz
  column(enabled_until?) : timestamptz
  column(created_at) : timestamptz
  column(updated_at?) : timestamptz
}

' ======= User–Group Membership (many-to-many) =======
table(UserGroupMembership) {
  primary_key(id) : int
  --
  foreign_key(user_id) : int
  foreign_key(group_id) : int
  --
  column(joined_at) : timestamptz
}

' ======= Relationships =======
EntraConfig ||--o{ User : "used for login"
User ||--o{ UserGroupMembership : "member via"
Group ||--o{ UserGroupMembership : "has members via"
Group ||--o{ TutorAssignment : "receives tutor"
TutorConfig ||--o{ TutorAssignment : "assigned to"
TutorConfig }o--|| User : "created by"
TutorConfig }o--|| AIModel : "powered by" 

' Notes from meeting (MVP scope):
note bottom
 - Tutor configs are stored in a private GitHub repo as YAML + system prompt (no UI yet).
 - Ignore cost & budget control for MVP.
 - Single-school MVP: all models are considered available.
 - Assume single school; no School abstraction in MVP. Entra OIDs stored on `User`.
 - TutorAssignment requires `group_id` OR `user_id` (XOR). Enforce via application logic / DB CHECK.
end note

@enduml
